fix(submit page): preview of embeds had wrong width

--- a/src/views/submit-page/submit-page.module.css
+++ b/src/views/submit-page/submit-page.module.css
@@ -194,12 +194,9 @@
 }
 
 .mediaPreview {
-  display: inline-block;
-  position: relative;
-  align-items: center;
   margin-top: 10px;
-  font-size: smaller;
-  text-transform: capitalize;
+  width: 100%;
+  max-width: 500px;
 }
 
 .urlCancelButton {
@@ -223,9 +220,8 @@
 }
 
 .mediaPreview img, .mediaPreview iframe, .mediaPreview video {
-  max-width: 100%;
+  width: 100%;
   max-height: 300px;
-  box-sizing: border-box;
   border: none;
 }
 
